[gd_scene load_steps=7 format=3 uid="uid://dh62hwqkxcqix"]

[ext_resource type="Script" uid="uid://676x0y0ctvcg" path="res://Inicio/Scripts/mdi.gd" id="1_r7mvp"]
[ext_resource type="Texture2D" uid="uid://b24mm0k612q1r" path="res://Inicio/Sprites/rata-MDI.png" id="1_tjdt8"]
[ext_resource type="Texture2D" uid="uid://bvvbkfk8fyoto" path="res://Inicio/Sprites/titulo-MDI.png" id="2_r7mvp"]
[ext_resource type="Texture2D" uid="uid://la43v7tjgf3h" path="res://Inicio/Sprites/Opciones-MDI.png" id="3_lm3mu"]
[ext_resource type="Texture2D" uid="uid://qjtaai4m4bmc" path="res://Inicio/Sprites/Jugar-MDI.png" id="4_2n4ot"]
[ext_resource type="Texture2D" uid="uid://ccqj82li8826c" path="res://Inicio/Sprites/salir-MDI.png" id="6_lm3mu"]

[node name="MDI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -6.0
offset_right = 53.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_r7mvp")

[node name="SplitContainer" type="SplitContainer" parent="."]
layout_mode = 2
drag_area_highlight_in_editor = true

[node name="Izquierda" type="CenterContainer" parent="SplitContainer"]
layout_mode = 2

[node name="Rata" type="TextureRect" parent="SplitContainer/Izquierda"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
texture = ExtResource("1_tjdt8")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SplitContainer"]
layout_mode = 2

[node name="TÃ­tulo" type="TextureRect" parent="SplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_r7mvp")
expand_mode = 3
stretch_mode = 5

[node name="Opciones" type="VBoxContainer" parent="SplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Jugar-boton" type="TextureButton" parent="SplitContainer/VBoxContainer/Opciones"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("4_2n4ot")
ignore_texture_size = true
stretch_mode = 5

[node name="Opciones boton" type="TextureButton" parent="SplitContainer/VBoxContainer/Opciones"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("3_lm3mu")
ignore_texture_size = true
stretch_mode = 5

[node name="Salir-boton" type="TextureButton" parent="SplitContainer/VBoxContainer/Opciones"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("6_lm3mu")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="SplitContainer/VBoxContainer/Opciones/Jugar-boton" to="." method="_on_jugarboton_pressed"]
[connection signal="pressed" from="SplitContainer/VBoxContainer/Opciones/Opciones boton" to="." method="_on_opciones_boton_pressed"]
[connection signal="pressed" from="SplitContainer/VBoxContainer/Opciones/Salir-boton" to="." method="_on_salirboton_pressed"]
[connection signal="pressed" from="SplitContainer/VBoxContainer/Opciones/Salir-boton" to="." method="_on_jugarboton_pressed"]
